--- a/chapter1-10.css
+++ b/chapter1-10.css
@@ -12,5 +12,80 @@ header{
 main{
   margin: 50px auto;
   width: 960px;
+  display: flex;
 }
 
+.step-box{
+  width: 300px;
+  margin-right: 30px;
+  padding: 10px 10px 0;
+  position: relative;
+  background-color: #eeeeee;
+}
+
+.step-num{
+  background-color: #ff9a4b;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #fff;
+}
+
+.step-image1{
+  position: bottom;
+  height: 150px;
+  background-image: url(img/flow01.png);
+  background-size: cover;
+}
+
+.step-image2{
+  position: bottom;
+  height: 150px;
+  background-image: url(img/flow02.png);
+  background-size: cover;
+}
+
+.step-image3{
+  position: bottom;
+  height: 150px;
+  background-image: url(img/flow03.png);
+  background-size: cover;
+}
+
+.step-title{
+  margin: 15px 0 5px;
+}
+
+footer{
+  height: 50px;
+  background-color: #aaaaaa;
+}
+
+@media screen and (max-width: 768px) {
+  main{
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+
+  .step-box{
+    width: 90%;
+    margin: 0 auto 20px;
+  }
+
+  .step-box:last-child{
+    margin-bottom: 0;
+  }
+
+  .step-image1{
+    background-size: 100% 100%;
+  }
+
+  .step-image2{
+    background-size: 100% 100%;
+  }
+
+  .step-image3{
+    background-size: 100% 100%;
+  }
+}
